# maibi

./: .gitignore  PR_GUIDELINES.md  README.md  agents.md  pyproject.toml  start_maibi.cmd
client/: __init__.py  audio_capture.py  demo_app.py  hotkey.py  launcher.py  session_bootstrap.py  session_runner.py  text_commit.py  ui_state.py
core/: __init__.py  asr.py  audio.py  commit.py  config.py
core/providers/: __init__.py  tencent.py
docs/: PLAN.md  PR_GUIDELINES.md  README.md  STATUS.md
server/: __init__.py  app.py  config.example.json
tests/: test_audio_capture.py  test_audio_framing.py  test_client_ui_state.py  test_core_contracts.py  test_demo_app_import.py  test_hotkey.py  test_launcher.py  test_mock_asr_integration.py  test_project_skeleton.py  test_server_app.py  test_session_bootstrap.py  test_session_runner.py  test_tencent_asr_signer.py  test_text_commit.py
tests/helpers/: __init__.py  mock_asr.py
