[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maibi"
version = "0.1.0"
description = "Windows desktop Chinese voice input tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
client = [
    "httpx>=0.27",
    "PySide6>=6.7",
    "pywin32>=306; platform_system=='Windows'",
    "sounddevice>=0.5",
    "websockets>=13.0",
]
demo = [
    "PySide6>=6.7",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=13.0",
]
dev = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "PySide6>=6.7",
    "pywin32>=306; platform_system=='Windows'",
    "pytest>=8.0",
    "sounddevice>=0.5",
    "uvicorn>=0.32",
    "websockets>=13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["client*", "core*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

